--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,9 @@
 @import 'components/image';
 @import 'components/article';
 @import 'components/scrollable';
+@import 'components/footer';
+@import 'components/subscription-card';
+@import 'slider';
 
 @import "auth";
 
