--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -5,6 +5,8 @@ html(lang="en" dir="ltr")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+    link(href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet")
+    link(href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" rel="stylesheet")
     title Kalami
 
     //link(rel='stylesheet' href='https://cdn.rtlcss.com/mdl/1.2.1/material.rtl.min.css' integrity='sha384-1z92ngOM16ZY2CickWgUrydff0ExYv2Fn8/6WUwsWxgrcJym3w+ogWivpi3nEh0G' crossorigin='anonymous')
