--- a/src/styles/components/_scrollable.scss
+++ b/src/styles/components/_scrollable.scss
@@ -2,6 +2,9 @@
   position: fixed;
   top: 0;
   left: 0;
+  @media (max-width: 1024px) {
+    display: flex;
+  }
 }
 .mdl-layout__content{
   & + .page-content{
@@ -15,6 +18,7 @@
   background: red;
 }
 .landing{
+  overflow-x: hidden;
   & + div{
     opacity: 0;
     & + div{
@@ -24,9 +28,14 @@
   }
 }
 .demo#section-wipes{
-  // height: calc(1000px - 60px) !important;
-  // margin-top: 60px;
+  background-color: lightcoral;
+  margin-top: 60px;
   height: auto !important;
+  position: relative;
+  @media (max-width: 1024px){
+    margin-top: 55px;
+  }
+  
   .scrollmagic-pin-spacer{
     height: 100vh !important;
   }  
@@ -35,10 +44,14 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  &::-webkit-scrollbar {
-    width: 0;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
-  }
+  // &::-webkit-scrollbar {
+  //   width: 0;  /* Remove scrollbar space */
+  //   background: transparent;  /* Optional: just make scrollbar invisible */
+  // }
+  // @media (max-width: 768px){
+  //   background: center url('https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/nexus5x.png') no-repeat ;
+  //   background-size: 100%;
+  // }
 }
 .panel {
   height: 100%;
@@ -55,6 +68,8 @@
       width: 350px;
       height: 700px;
       position: relative;
+      background-size: contain;
+
       img{
         position: absolute;
         top: 69px;
@@ -66,6 +81,32 @@
           opacity: 1;
         }
       }
+      @media (max-width: 1024px) {
+        width: 280px;
+        height: 600px;
+        img{
+          width: 254px;
+          height: 443px;
+          top: 75px;
+          left: 12px;
+        }
+      }
+      @media (max-width: 768px) {
+        display: none;
+        background-image: none;
+        width: 100%;
+        height: 100%;
+        img{
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          display: none;
+        }
+      }
+    }
+    @media (max-width: 768px){
+      width: 100% !important;
     }
   }
   &.turqoise, &.green, &.purple{
@@ -73,39 +114,67 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // align-items: center;
+    align-items: center;
     padding: 20px;
     color: #3F51B5;
     top: 0 !important;
+    @media (max-width: 768px){
+      width: 70% !important;
+    }
   }
   &.turqoise{
     background-color: #B3E5FC;
     right: 0 !important;
-    align-items: flex-start;
+    @media (max-width: 768px){
+      background: center url('https://via.placeholder.com/150') no-repeat ;
+      background-size: cover;
+    }
+    // align-items: flex-start;
     // text-align: center;
   }
   &.purple{
     background-color: #F8BBD0;
     right: 0 !important;
-    align-items: flex-start;
+    @media (max-width: 768px){
+      background: center url('https://via.placeholder.com/160') no-repeat ;
+      background-size: cover;
+    }
+
+    // align-items: flex-start;
   }
   &.green{
     background-color: #D1C4E9;
-    align-items: flex-end;
+    @media (max-width: 768px){
+      background: center url('https://via.placeholder.com/170') no-repeat ;
+      background-size: cover;
+    }
+
+    // align-items: flex-end;
   }
 }
 
 .scrollable-title{
+  font-size: 60px;
   font-weight: 600;
   text-transform: uppercase;
 }
-
+.scrollable-description{
+  font-size: 20px;
+  line-height: 1;
+  text-align: center;
+}
 
 .plans, .features{
-  height: 100vh;
+  min-height: 100vh;
+  // width: 99%;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding: 0 100px;
+  .display-3{
+    text-align: start;
+  }
+  // padding: 0 100px;
   .mdl-grid{
     width: 100%;
     margin: auto 0;
@@ -115,10 +184,17 @@
       // align-items: flex-end;
     }
   }
-  &.features{
-    background-color: rgba($color: #3F51B5, $alpha: .1);
+  &.plans{
+    .display-3{
+      width: 89%;
+      text-align: left;
+    }
   }
-  @media (max-width: 992px) {
-    padding: 0;
+  &.features{
+    padding: 0 100px;
+    background-color: rgba($color: #3F51B5, $alpha: .1);
+    @media (max-width: 992px) {
+      padding: 0 27px;
+    }
   }
 }
