--- a/src/views/partials/full-header.pug
+++ b/src/views/partials/full-header.pug
@@ -3,7 +3,5 @@ header.mdl-layout__header.full-header
     //- Title
     .mdl-layout-title
       block page-title
-
     nav.mdl-navigation
-      a(class="mdl-navigation__link" href="packs.html") All Packs
-      a(class="mdl-navigation__link" href="free-sentences.html") Free Sentences
+      a(class="mdl-navigation__link" href="login.html") login
