--- a/src/views/partials/my-subscriptions.pug
+++ b/src/views/partials/my-subscriptions.pug
@@ -2,12 +2,28 @@
   .mdl-card__supporting-text
     h5.mdl-card__title-text Previous Subscriptions
     ul.mdl-list
-      li.mdl-list__item.mdl-list__item--two-line
+      li.mdl-list__item.mdl-list__item--three-line
         span.mdl-list__item-primary-content
           span
-            | Yearly
+            | 3 days : 
+            small.mdl-typography--font-bold.mdl-color-text--orange-700 in trial
+          span.mdl-list__item-text-body
+            strong Start at:
+            | 2 Mar 2020 |
+            strong Expires at:
+            | 2 April 2020
+        span.mdl-list__item-secondary-content
+          //- span.mdl-chip.mdl-color--cyan-50
+          button.mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.mdl-button--accent.btn--rounded
+            | Cancel
+
+      .mdl-menu__item--full-bleed-divider
+      li.mdl-list__item.mdl-list__item--three-line
+        span.mdl-list__item-primary-content
+          span
+            | Yearly : 
             small.mdl-typography--font-bold.mdl-color-text--green-700 Active
-          span.mdl-list__item-sub-title
+          span.mdl-list__item-text-body
             strong Start at:
             | 2 Mar 2020 |
             strong Expires at:
@@ -18,12 +34,12 @@
 
 
       .mdl-menu__item--full-bleed-divider
-      li.mdl-list__item.mdl-list__item--two-line
+      li.mdl-list__item.mdl-list__item--three-line
         span.mdl-list__item-primary-content
           span
-            | Monthly
+            | Monthly : 
             small.mdl-typography--font-bold.mdl-color-text--red Expired
-          span.mdl-list__item-sub-title
+          span.mdl-list__item-text-body
             strong  Start at:
             | 2 Mar 2020 |
             strong Expires at:
