--- a/src/styles/components/_plan-container.scss
+++ b/src/styles/components/_plan-container.scss
@@ -64,12 +64,13 @@
 
     .pack-card__title {
       // font-weight: 600;
-      color: #000;
+      color: #fff;
       filter: none;
     }
 
     .pack-card__title--sm {
-      color: #262525;
+      color: #fff;
+
       font-size: 11px;
       line-height: 1.2;
       font-weight: 300;
