--- a/src/views/auth.pug
+++ b/src/views/auth.pug
@@ -1,7 +1,7 @@
 extends layouts/main
 
 block layout
-  .mdl-layout.mdl-js-layout
+  .mdl-layout.mdl-js-layout.auth-layout
     section.auth-container
       #cube.show-front
         include partials/login
