--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -7,7 +7,8 @@ html(lang="en" dir="ltr")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     link(href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet")
     link(href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" rel="stylesheet")
-    title Kalami
+    title Kalami | 
+      block page-title
 
     //link(rel='stylesheet' href='https://cdn.rtlcss.com/mdl/1.2.1/material.rtl.min.css' integrity='sha384-1z92ngOM16ZY2CickWgUrydff0ExYv2Fn8/6WUwsWxgrcJym3w+ogWivpi3nEh0G' crossorigin='anonymous')
     //script(src='https://cdn.rtlcss.com/mdl/1.2.1/material.min.js' integrity='sha384-Llr4wcq+yhgKO4ZQRN7Sx88cvQneoOOxcysisJKroD8nKQA7y0NyriabEaMYsvWW' crossorigin='anonymous')
