--- a/src/views/partials/footer.pug
+++ b/src/views/partials/footer.pug
@@ -40,6 +40,6 @@ footer
             | Bob Odenkirk
 
   .copy-rights
-    p Lorem ipsum dolor sit amet consectetur adipisicing
+    p Kalami &copy; copy rights
     .fritill Designe & Developed By Fritill
       img(src="~images/Fritill-logo.png", alt="")
