--- a/src/views/partials/full-header.pug
+++ b/src/views/partials/full-header.pug
@@ -4,4 +4,5 @@ header.mdl-layout__header.full-header
     .mdl-layout-title
       block page-title
     nav.mdl-navigation
-      a(class="mdl-navigation__link" href="login.html") login
+      a(class="mdl-navigation__link" href="auth.html") login
+      a(class="mdl-navigation__link" href="packs.html") All Packs
