--- a/src/views/partials/plans.pug
+++ b/src/views/partials/plans.pug
@@ -5,7 +5,7 @@
 		form
 			h5 Unlock Kalami Premium
 			p Functionality of Kalami will always be free. Premium offers +50 additional Assistive Card packs
-			#allPlanCards 
+			//- #allPlanCards 
 				a(href='#' class="pack-card pack-card--sm")
 					img(src='~images/girl.png' alt='image' class="pack-card__image")
 					.pack-card__title Toys
@@ -51,7 +51,39 @@
 							.mdl-list__item-sub-title One-time Payment
 						span.mdl-list__item-secondary-content
 							span.mdl-list__item-secondary-info EGP 2500
-								
+
+			.packs-slider
+				div
+					a(href='#' class="pack-card pack-card--sm")
+						img(src='~images/girl.png' alt='image' class="pack-card__image")
+						.pack-card__title Toys
+						.pack-card__title.pack-card__title--sm 24 cards
+						.pack-card__title.pack-card__title--sm 72 phrases
+				div
+					a(href='#' class="pack-card pack-card--sm")
+						img(src='~images/girl.png' alt='image' class="pack-card__image")
+						.pack-card__title Toys
+						.pack-card__title.pack-card__title--sm 24 cards
+						.pack-card__title.pack-card__title--sm 72 phrases
+				div
+					a(href='#' class="pack-card pack-card--sm")
+						img(src='~images/girl.png' alt='image' class="pack-card__image")
+						.pack-card__title Toys
+						.pack-card__title.pack-card__title--sm 24 cards
+						.pack-card__title.pack-card__title--sm 72 phrases
+				div
+					a(href='#' class="pack-card pack-card--sm")
+						img(src='~images/girl.png' alt='image' class="pack-card__image")
+						.pack-card__title Toys
+						.pack-card__title.pack-card__title--sm 24 cards
+						.pack-card__title.pack-card__title--sm 72 phrases
+				div
+					a(href='#' class="pack-card pack-card--sm")
+						img(src='~images/girl.png' alt='image' class="pack-card__image")
+						.pack-card__title Toys
+						.pack-card__title.pack-card__title--sm 24 cards
+						.pack-card__title.pack-card__title--sm 72 phrases
+
 			button.mdl-button.mdl-button--primary.mdl-js-button.mdl-js-ripple-effect.mdl-button--raised.mdl-button--colored.plans-container__submit
 				| Subscribe to the Selected Plan
 			p.mdl-typography--body-1.mdl-typography--font-bold.mdl-typography--text-center.mdl-color-text--red-A700 Cancel any time without cost
