--- a/src/views/subscriptions.pug
+++ b/src/views/subscriptions.pug
@@ -9,5 +9,5 @@ block content
     .mdl-cell--8-col
       include partials/my-subscriptions
 
-    .mdl-cell--4-col
+    .mdl-cell--4-col.mdl-cell--12-col-tablet.mdl-cell--12-col-phone
       include partials/plans
