--- a/src/styles/_auth.scss
+++ b/src/styles/_auth.scss
@@ -7,7 +7,22 @@
     width: 330px;
     height: 375px;
 }
-
+.auth-layout{
+  position: relative;
+  &::before{
+    position: absolute;
+    top: 0;
+    left: 0;    
+    width: 100%;
+    height: 100%;
+    content: '';
+    z-index: -1;
+    background-image: url('~images/Pattern_3.svg') ;
+    background-repeat: repeat;
+    background-size: contain;
+    opacity: .2;
+  }
+}
 #cube {
     width: 100%;
     height: 100%;
