--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,9 +11,11 @@
 @import 'components/scrollable';
 @import 'components/footer';
 @import 'components/subscription-card';
+@import 'components/banner';
 @import 'slider';
-
 @import "auth";
+
+// @import url('https://cdn.rtlcss.com/mdl/1.2.1/material.rtl.min.css');
 
 body {
   height: 100%;
@@ -66,7 +68,9 @@ body {
   padding-left: 241px;
   display: flex;
   box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
-
+  @media (max-width: 1024px){
+    padding-left: 0;
+  }
   .arrow {
     margin: 17px 0 0 17px;
   }
@@ -88,6 +92,50 @@ body {
       font-weight: 600;
       overflow: unset;
       margin: 10px 0;
+    }
+  }
+}
+
+.mdl-tabs__panel{
+  .mdl-card__supporting-text{
+  }
+  .title{
+    margin-top: 0;
+    color: lighen(#000, 10%);
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+}
+
+.subscription-list{
+  .mdl-list__item-secondary-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .mdl-button{
+      min-width: 30px;
+      height: 30px;
+      width: 30px;
+      margin-left: 16px;
+      font-size: 16px;
+      color: #fff;
+      background-color: #f44336;
+    }
+  }
+  @media (max-width: 768px ){
+    .mdl-list__item{
+      height: auto;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .mdl-list__item-secondary-content{
+      margin-left: auto;
+    }
+    .mdl-list__item-text-body{
+      height: auto;
+    }
+    .mdl-list__item-primary-content{
+      height: auto;
     }
   }
 }
