--- a/src/views/feedback.pug
+++ b/src/views/feedback.pug
@@ -3,7 +3,8 @@ extends layouts/app
 block page-title
 	| Feedback
 
-block content 
+block content
+	include ./partials/banner
 	.articles-wrapper
 		.mdl-grid
 			.mdl-cell.mdl-cell--2-col
