--- a/src/views/layouts/guest.pug
+++ b/src/views/layouts/guest.pug
@@ -4,7 +4,7 @@ block layout
 	//- .mdl-layout.mdl-js-layout.mdl-layout--fixed-header
 	.landing
 		include ../partials/full-header
-			block page-title
+			//- block page-title
 			//- main.mdl-layout__content
 			//- 	.page-content
 		block content
