--- a/src/views/partials/login.pug
+++ b/src/views/partials/login.pug
@@ -2,7 +2,7 @@ figure.front
 	form(action="" method="post")
 		.mdl-card.mdl-shadow--6dp
 			.mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
-				h2.mdl-card__title-text Simple Login
+				h2.mdl-card__title-text Sign in
 			.mdl-card__supporting-text
 				.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
 					input#login.mdl-textfield__input
