--- a/src/views/partials/my-subscriptions.pug
+++ b/src/views/partials/my-subscriptions.pug
@@ -1,32 +1,35 @@
 .mdl-card.mdl-shadow--2dp.mdl-card--unset-width
   .mdl-card__supporting-text
     h5.mdl-card__title-text Previous Subscriptions
-    ul.mdl-list
+    ul.mdl-list.subscription-list
       li.mdl-list__item.mdl-list__item--three-line
         span.mdl-list__item-primary-content
           span
-            | 3 days : 
+            | 3 days  
             small.mdl-typography--font-bold.mdl-color-text--orange-700 in trial
           span.mdl-list__item-text-body
-            strong Start at:
-            | 2 Mar 2020 |
-            strong Expires at:
+            strong Start at : 
+            | 2 Mar 2020 | 
+            strong Expires at : 
             | 2 April 2020
         span.mdl-list__item-secondary-content
+          span.mdl-chip.mdl-color--cyan-50
+            span.mdl-chip__text EGP 1000/Year
           //- span.mdl-chip.mdl-color--cyan-50
-          button.mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.mdl-button--accent.btn--rounded
-            | Cancel
+          button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored
+            i.material-icons close
+
 
       .mdl-menu__item--full-bleed-divider
       li.mdl-list__item.mdl-list__item--three-line
         span.mdl-list__item-primary-content
           span
-            | Yearly : 
+            | Yearly  
             small.mdl-typography--font-bold.mdl-color-text--green-700 Active
           span.mdl-list__item-text-body
-            strong Start at:
-            | 2 Mar 2020 |
-            strong Expires at:
+            strong Start at : 
+            | 2 Mar 2020 | 
+            strong Expires at : 
             | 2 April 2020
         span.mdl-list__item-secondary-content
           span.mdl-chip.mdl-color--cyan-50
@@ -37,12 +40,12 @@
       li.mdl-list__item.mdl-list__item--three-line
         span.mdl-list__item-primary-content
           span
-            | Monthly : 
+            | Monthly  
             small.mdl-typography--font-bold.mdl-color-text--red Expired
           span.mdl-list__item-text-body
-            strong  Start at:
-            | 2 Mar 2020 |
-            strong Expires at:
+            strong  Start at : 
+            | 2 Mar 2020 | 
+            strong Expires at : 
             | 2 April 2020
         span.mdl-list__item-secondary-content
           span.mdl-chip.mdl-color--cyan-50
