--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -7,6 +7,8 @@ html(lang="en" dir="ltr")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     link(href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet")
     link(href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500&display=swap" rel="stylesheet")
+    
     title Kalami | 
       block page-title
 
