--- a/src/styles/components/_pack-card.scss
+++ b/src/styles/components/_pack-card.scss
@@ -64,4 +64,15 @@
   .pack-card{
     transform: scale(.9);
   }
+  .slick-arrow{
+    &::before{
+      color: #4051B5;
+    }
+    &.slick-next{
+      right: -16px;
+    }
+    &.slick-prev{
+      left: -16px;
+    }
+  }
 }
