--- a/src/views/partials/left-sidebar.pug
+++ b/src/views/partials/left-sidebar.pug
@@ -42,12 +42,13 @@
     
 
 
-    .sidebar-footer 
-      a(href='#' class="mdl-list__item sidebar-footer__download")
-        img(src='~images/google-play.png' alt='apple store')
+    .sidebar-footer
+      div 
+        a(href='#' class="mdl-list__item sidebar-footer__download")
+          img(src='~images/google-play.png' alt='apple store')
 
-      a(href='#' class="mdl-list__item sidebar-footer__download")
-        img(src='~images/apple-store.png' alt='apple store')
+        a(href='#' class="mdl-list__item sidebar-footer__download")
+          img(src='~images/apple-store.png' alt='apple store')
 
       .sidebar-footer__links 
         a(href='#')
