--- a/src/styles/components/_left-sidebar.scss
+++ b/src/styles/components/_left-sidebar.scss
@@ -48,15 +48,25 @@
 .sidebar-footer {
   position: absolute;
   bottom: 0;
+  & > div{
+    display: flex;
+  }
 
   .sidebar-footer__download {
     padding: 4px;
+    width: 50%;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+    }
   }
 
   .sidebar-footer__links{
     padding: 0 18px;
     margin-top: 8px;
-
+    display: flex;
+    flex-wrap: wrap;
 
     a{
       margin: 0 4px;
