--- a/src/views/partials/forgetPassword.pug
+++ b/src/views/partials/forgetPassword.pug
@@ -2,7 +2,7 @@ figure.bottom
   .mdl-card.mdl-shadow--6dp
     form(action="" method="post")
       .mdl-card__title.mdl-color--primary.mdl-color-text--white.relative
-        a.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon(onclick='flip("show-front")')
+        a.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon.auth-animation(onclick='flip("show-front")')
           i.material-icons arrow_back
         h2.mdl-card__title-text Lost Password
       .mdl-card__supporting-text
