--- a/src/styles/components/_scrollable.scss
+++ b/src/styles/components/_scrollable.scss
@@ -1,10 +1,18 @@
 .full-header{
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
+  width: 50%;
+  background-color: transparent;
+  box-shadow: none;
+  transition: .3s ease all;
+  .mdl-layout__header-row{
+    // justify-content: flex-end;
+  }
   @media (max-width: 1024px) {
     display: flex;
   }
+  
 }
 .mdl-layout__content{
   & + .page-content{
@@ -23,7 +31,7 @@
     opacity: 0;
     & + div{
       opacity: 0;
-      height: 100vh !important;
+      // height: 100vh !important;
     }
   }
 }
